:pencil: Ajustando tela de ranking

--- a/components/ranking.html
+++ b/components/ranking.html
@@ -198,24 +198,30 @@
             <h2 class="mt-5">
                 Viajantes 
             </h2>
-            <div class="row">
+            <div class="row lets">
                 <div class="col-1">
-                    Posição
+                    <p>
+                        Posição
+
+                    </p>
                 </div>
-                <div class="col-9">
-                    Usuário
+                <div class="col d-block  " style="min-width: 150px;">
+                    
+                    <p>
+                        Usuário
+                    </p>
                 </div>
-                <div class="col-2 text-end">
-                    Contribuições
+                <div class="col  text-end " style="min-width: 10px;" >
+                    <p>Contribuições</p>
                 </div>
             </div>
 
-            <div class="row mt-3 car point">
+            <div class="row mt-3 car point lets">
                 <div class="col-1 back  text-center">
                     <h1>1</h1>
                 </div>
 
-                <div class="col-9 back point">
+                <div class="col d-bloc col d-bloc back point">
                     <div class="row">
                         <div class="col-2">
                             <img src="/img/perfilfundo.png" alt="">
@@ -227,43 +233,43 @@
                     </div>
                 </div>
 
-                <div class="col-2 text-end back point">
+                <div class="col text-end back point">
                     <p>
                         48230
                     </p> 
                 </div>
             </div>
 
-            <div class="row mt-3 car point">
+            <div class="row mt-3 car point lets">
                 <div class="col-1 back  text-center">
                     <h1>2</h1>
                 </div>
             
-                <div class="col-9 back point">
+                <div class="col d-bloc back point">
                     <div class="row">
                         <div class="col-2">
                             <img src="/img/davi.jpg" alt="">
                         </div>
             
                         <div class="col">
-                            <h6>Davi Evangelista</h6>
+                            <h6>Davi </h6>
                         </div>
                     </div>
                 </div>
             
-                <div class="col-2 text-end back point">
+                <div class="col text-end back point">
                     <p>
                         47230
                     </p>
                 </div>
             </div>
 
-            <div class="row mt-3 car point">
+            <div class="row mt-3 car point lets">
                 <div class="col-1 back  text-center">
                     <h1>3</h1>
                 </div>
             
-                <div class="col-9 back point">
+                <div class="col d-bloc back point">
                     <div class="row">
                         <div class="col-2">
                             <img src="/img/vick.jpg" alt="">
@@ -275,19 +281,19 @@
                     </div>
                 </div>
             
-                <div class="col-2 text-end back point">
+                <div class="col text-end back point">
                     <p>
                         35230
                     </p>
                 </div>
             </div>
 
-            <div class="row mt-3 car point mb-5">
+            <div class="row mt-3 car point  lets mb-5">
                 <div class="col-1 back  text-center">
                     <h1>4</h1>
                 </div>
             
-                <div class="col-9 back point ">
+                <div class="col d-bloc back point ">
                     <div class="row">
                         <div class="col-2">
                             <img src="/img/paula.png" alt="">
@@ -299,7 +305,7 @@
                     </div>
                 </div>
             
-                <div class="col-2 text-end back point ">
+                <div class="col text-end back point ">
                     <p>
                         20230
                     </p>
