--- a/style/style.css
+++ b/style/style.css
@@ -170,8 +170,8 @@ h2 {
 
 .point img {
     border-radius: 50%;
-    margin: 5px;
-    width: 80%;
+    margin-top: 25px;
+    width: 100%;
 
     
 }
@@ -194,6 +194,12 @@ body {
 
 .va {
     margin-top: 100px;
+}
+
+
+
+.lets div:first-child {
+    min-width: 60px;
 }
 
 
