--- a/style/style.css
+++ b/style/style.css
@@ -188,6 +188,12 @@ h2 {
     margin-top: 20px;
 }
 
+@media (min-width:"375px") {
+    .te {
+        display: none;
+    }
+}
+
 body {
     background-color: #f1f2f5;
 }
