:sparkles: Revisão e adicao de updates :ok_hand:

--- a/components/novaViagem.html
+++ b/components/novaViagem.html
@@ -1,53 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 
 <head>
-
-    <link rel="preconnect" href="https://cdn2.civitatis.com">
-    <title>Madrid - Guia de viagem e turismo em Madrid</title>
-
-    <meta name="title" content="Madrid - Guia de viagem e turismo em Madrid" />
-    <meta name="description"
-        content="Guia de Madrid com toda a informação necessária para viajar a Madrid. Saiba tudo que você precisa para visitar e curtir a capital da Espanha." />
-    <meta name="keywords"
-        content="madrid, turismo madrid, dicas de madrid, madri, dicas de madri, guia de madrid, tudo sobre madrid, viagem madrid" />
-    <meta name="format-detection" content="telephone=no">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rev="made" rel="author" href="mailto:" />
-    <meta name="revisit-after" content="30" />
-    <meta name="robots" content="all" />
-    <meta name="viewport"
-        content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-    <meta name="theme-color" content="#F2994A">
-
-
-    <style>
-        @font-face {
-            font-family: 'montserrat';
-            src: url('https://cdn2.civitatis.com/fonts/montserrat-light-webfont.woff2') format('woff2'),
-                url('https://cdn2.civitatis.com/fonts/montserrat-light-webfont.woff') format('woff');
-            font-weight: 200;
-            font-style: normal;
-        }
-
-        body {
-            font-family: montserrat, arial, sans-serif;
-            font-weight: 200;
-        }
-    </style>
-
-
-    <link href="https://cdn2.civitatis.com/css/guidesVendor-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
-        rel="stylesheet">
-    <link href="https://cdn2.civitatis.com/css/guidesAbove-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn2.civitatis.com/css/civNew-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
-        media="all" />
-
-    <link href="https://cdn2.civitatis.com/css/madrid-d13432e13d43f9fa5f1d9b91f84c1cfc87cd5ca8.min.css"
-        rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="icon" type="imagem/png" href="/img/logo.png">
 
@@ -56,9 +13,10 @@
 
     <link rel="stylesheet" href="/style/style.css">
 
+    <title>Descuba sua próxima viagem - Brackets</title>
 </head>
 
-<body class="js-booking-ok  guide-home --price-medium _price-BRL is-guide --home  --old-design">
+<body>
 
     <header class="border sticky-top head">
         <div class="container ">
@@ -224,189 +182,51 @@
         </div>
     </header>
 
-    <main id="civ-main-element">
-        <header class="o-home-header">
-            <div class="o-home-header__img">
-                <picture>
-                    <img src="/img/Madri-Barcelona.jpg" alt="Imagem de Madrid" />
-                </picture>
-            </div>
+    <main>
 
-            <div class="o-home-header__content l-guide-section__inner">
-                <h1 class="o-home-header__title --madrid">Madrid - Espanha</h1>
-            </div>
-            <div class="a-link-to-content-wrapper">
-                <a class="a-link-to-content js-link-to" href="#home-guide-toc" title="ir ao conteúdo">ir ao conteúdo</a>
-            </div>
-        </header>
+        <section class="vertical-center ">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
 
-        <section class="l-guide-section with-image" id="home-main-section">
-            <div class="l-guide-section__inner">
-                <div class="o-content _regular-content">
-                    <p>Você vai<strong> viajar a Madrid</strong>? Planeje sua viagem com a Brackets, nós te auxiliamos
-                        em todas as etapas, preços das
-                        diferentes atrações turísticas ou sobre como se locomover. Conheça o nosso <strong>guia de
-                            Madrid</strong>, escrito por viajantes para viajantes e que ajudará a organizar sua viagem.
-                    </p>
-                </div>
+                        <div class="col-md-4">
 
-                <div class="o-content _regular-content">
-                    <h2>Por que visitar Madrid?</h2>
-                    <p>
-                        A capital da Espanha é a cidade que jamais dorme, dos concertos ao ar livre, das 'tapas e cañas'
-                        com
-                        preço honesto, das meninas de Velásquez no Museu do Prado e de uma rica vida noturna. Em resumo:
-                        uma
-                        cidade apaixonante, que com pouco dinheiro você poderá conhecer bem.
-                    </p>
-                    <p>
-                        A cidade é perfeita para caminhar com segurança em qualquer horário da noite. Sair de compras
-                        nas
-                        “Rebajas” e voltar carregada de bolsas da Zara. Ou ainda sair somente pelas áreas verdes da
-                        cidade,
-                        se perder no Parque do Retiro ou fazer piquenique em uma das maiores áreas verdes da Europa, a
-                        antiga área de caça dos reis chamada “Casa de Campo”.
-                    </p>
+                        </div>
 
-                    <p><strong>Madrid respira arte em cada esquina</strong>. Os museus da capital abrigam autênticas
-                        joias assinadas pelos pintores e escultores mais influentes da história da arte. O Museu do
-                        Prado, o Reina Sofía e o Thyssen formam um
-                        triângulo perfeito para dar asas aos sentidos e conhecer o melhor da <strong>arte espanhola e
-                            internacional</strong>.</p>
+                        <div class="text-center profile">
+                            <img src="/img/paula.png" alt="Profile" class="img-fluid">
+                            <h1 class="mt-3"><strong>Olá,</strong> Paula Cardoso</h1>
 
-                    <h2>Por onde começar?</h2>
 
-                    <p> Está a planear visitar Madrid e não sabe por onde começar? Para que não perca tempo a planear,
-                        juntamos o melhor de Madrid e montamos um roteiro de 3 dias para uma visita inesquecível à
-                        capital de Espanha. Neste roteiro para visitar Madrid em 3 dias encontra os lugares imperdíveis
-                        a visitar em Madrid, onde comer e onde ficar, fotos para inspiração, sugestões de passeios e um
-                        mapa para se orientar quando visitar Madrid.</p>
+                            <div class="text-start mt-3 sec text-center">
+                                <p> Iremos te ajudar a ter a sua viagem dos sonhos,
+                                    Preencha os campos a seguir para podermos te ajudar</p>
+                            </div>
 
-                    <p>A capital da Espanha é muitas vezes ofuscada pela rival Barcelona ou por outras grandes
-                        cidades
-                        europeias. É verdade que não tem uma Torre Eiffel, um relógio Big Ben ou uma antena Berliner
-                        Fernsehturm. Mas antes de tirar conclusões precipitadas relegando Madrid para second best como
-                        destino de viagem, leia este artigo onde revelamos a Madrid para lá do óbvio. </p>
+                            <div class="text-center tes">
+                                <a href="/components/question.html">
+                                    <button class="btn btn-primary">
+                                        Próximo
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
 
-                    <p>Além disso, a cidade conta com um lugar encantador em qualquer estação: o Parque do Retiro. O
-                        pulmão de Madrid por excelência mantém
-                        seu
-                        particular encanto intacto o ano inteiro e já se tornou uma visita imprescindível na capital.
-                    </p>
-
-                    <h2>Ainda não possui hotel?</h2>
-
-                    <p>A Smiles lhe ajuda a encontrar o seu hotel em Madrid, você poderá encontrar<strong>
-                            incríveis ofertas em hotéis de todas as categorias</strong>. O melhor preço é garantido.
-                    </p>
-
-                    <p><a href="https://www.smiles.com.br/hoteis" title="Hotéis em Madrid">Hotéis em Madrid</a> –
-                        Reserve online com preço mínimo
-                        garantido.</p>
-
+                    </div>
                 </div>
             </div>
         </section>
 
-
-        <section class="l-guide-section --full-for-medium-down">
-            <div class="l-guide-section__inner">
-
-                <header>
-                    <h2 class="a-title-guide-section">Dicas da comunidade</h2>
-                </header>
-
-                <ul class="m-list-que-hacer for-country hide-for-small-only">
-                    <li><span class="a-text--banner">Comentários de outros viajantes</span></li>
-                </ul>
-
-            </div>
-
-        </section>
     </main>
 
-    <main class="bg-ranking">
-        <div class="container ">
-            <div class="row">
+    <section>
 
-
-
-                <div class="col-3">
-                    <div class="feed-picture text-end mt-3">
-                        <img src="/img/perfilfundo.png" alt="">
-                    </div>
-                </div>
-
-                <div class="col-7 feed-card m-3">
-                    <div class="m-3">
-                        <h4>Gustavo Mendes</h4>
-                        <p>
-                            Vocês conhecem a dança folclórica flamingo ?
-                        </p>
-                        <p>
-                            O flamenco é um dos elementos mais característicos da cultura espanhola, especialmente na
-                            Baixa Andaluzia, entre as
-                            províncias de Cádiz e Sevilha, onde surgiu por volta do século XVIII. Ele foi declarado
-                            Patrimônio Cultural Imaterial da
-                            Humanidade pela UNESCO em 2010.
-                        </p>
-
-
-                        <h6 class="link"> #Flamingo #Dança </h6>
-                    </div>
-
-
-                    <div class="text-center m-3">
-                        <img src="/img/espanha.jpg" alt="" class="img-fluid">
-                    </div>
-
-                </div>
-
-
-                <div class="col-3">
-                    <div class="feed-picture text-end mt-3">
-                        <img src="/img/davi.jpg" alt="">
-                    </div>
-                </div>
-
-                <div class="col-7 feed-card m-3">
-                    <div class="m-3">
-                        <h4>Davi Evangelista</h4>
-                        <p>
-                            A maior produtora de azeite do mundo
-                        </p>
-                        <p>
-                            Vocês sabiam disso?
-                        </p>
-
-                        <h6 class="link"> #Espanha #Azeite </h6>
-                    </div>
-
-
-                    <div class="text-center m-3">
-                        <img src="/img/espanha2.jpg" alt="" class="img-fluid">
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </main>
     </section>
-    </main>
 
-    <footer class="mt-5 ">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="nav text-center ">
-                        <h6>Brackets</h6>
-                        <p>Todos os direitos reservados © 2021</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
