--- a/components/feed.html
+++ b/components/feed.html
@@ -26,8 +26,6 @@
 
             <div class="row text-center mt-2 mb-2">
 
-
-
                 <div class="col">
                     <a href="/components/profile.html">
                         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30"
@@ -122,7 +120,9 @@
 
                 <div class="col">
                     <img src="/img/logo.png" alt="" class="logo-header">
-                    <h6>Brackets</h6>
+                    <a href="/index.html">
+                        <h6>Brackets</h6>
+                    </a>
                 </div>
 
                 <div class="col">
@@ -181,10 +181,7 @@
                         </svg>
                     </a>
                 </div>
-
             </div>
-
-
         </div>
     </header>
 
@@ -214,7 +211,7 @@
 
                         <div class="col">
                             <button class="btn">
-                                🎵  Música
+                                🎵 Música
                             </button>
                         </div>
                         <div class="col">
