--- a/components/location.html
+++ b/components/location.html
@@ -24,8 +24,6 @@
 
             <div class="row text-center mt-2 mb-2">
 
-
-
                 <div class="col">
                     <a href="/components/profile.html">
                         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30"
@@ -120,7 +118,9 @@
 
                 <div class="col">
                     <img src="/img/logo.png" alt="" class="logo-header">
-                    <h6>Brackets</h6>
+                    <a href="/index.html">
+                        <h6>Brackets</h6>
+                    </a>
                 </div>
 
                 <div class="col">
@@ -179,10 +179,7 @@
                         </svg>
                     </a>
                 </div>
-
             </div>
-
-
         </div>
     </header>
 
