--- a/components/profile.html
+++ b/components/profile.html
@@ -258,7 +258,7 @@
         </div>
 
         <div class="text-center mt-5">
-            <a href="index.html">
+            <a href="/components/novaViagem.html">
                 <button class="btn btn-primary">
                     Programar nova viagem
                 </button>
