--- a/components/ranking.html
+++ b/components/ranking.html
@@ -190,6 +190,53 @@
 
     </div>
 </header>
+    <!-- Button trigger modal -->
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <button type="button" class="btn btn-primary text-center" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                    Como participar
+                </button>
+
+            </div>
+
+        </div>
+    </div>
+    
+    
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Prêmios</h5>
+                    <button type="button" class="btn-close bg-danger" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h6 class="orange"> RANKING DE PRÊMIOS </h6>
+
+                    <p> Faça posts interativos com a comunidade, compartilhe dicas sobre onde viajar ou dicas da sua cidade. </p>
+
+                    <p> Receba reações da comunidade e participe do ranking mensal de prêmios.</p>
+
+                    <h6 class="orange text-center">
+                         TOP 3
+                    </h6>
+                    <div class="text-center">
+                        🏆
+                    </div>
+
+                    <p>
+                        O top 3 do ranking irá ganhar <strong>20.000</strong>, <strong>15.0000 </strong>, <strong>10.000</strong>  mil milhas, sucessivamente. Podendo assim trocar por benefícios exclusivos
+                    </p>
+
+                    <h1 class="orange text-center"> BOA SORTE</h1>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
     <section class="bg-ranking">
 
