--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,11 @@
     height: 200px;
 }
 
+
+.se {
+    animation: g 2.4s;
+}
+
 .es {
     animation: go 2.4s;
 }
@@ -267,6 +272,15 @@ body {
     }
 }
 
+@keyframes g {
+    0% {
+        transform: translateY(0px);
+    }
+    100% {
+        transform: translateY(30px);
+    }
+}
+
 svg#freepik_stories-traveling:not(.animated) .animable {
     opacity: 0;
 }
@@ -364,6 +378,40 @@ a {
     grid-template-columns: minmax(150px, 40%) 1fr;
 }
 
-.index .login {
-    background-image: linear-gradient(#FF0303, #ff5900);
+
+
+.gradient {
+        background-image: linear-gradient( #FF1D16, #FF7436);
+        border-radius: 0px 0 0 500px;
+    }
+
+
+.gradient h3 {
+    color: #fff;
 }
+
+.op {
+    height: 100%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+
+}
+
+.op  h1{
+    color: #fff;
+    font-weight: bolder;
+    font-size: 45px;
+
+}
+
+.hg h3:nth-child(2) {
+    font-size: 60px;
+    font-weight: bold;
+}
+
+.hg h3:nth-child(3) {
+    font-size: 25px;
+    font-weight: bold;
+}
+
