:pencil:Name fix Ranking

--- a/components/ranking.html
+++ b/components/ranking.html
@@ -300,7 +300,7 @@
                             </div>
 
                             <div class="col">
-                                <h6>Davi </h6>
+                                <h6>Davi Evangelista</h6>
                             </div>
                         </div>
                     </div>
