:sparkle: photos addition

--- a/components/results.html
+++ b/components/results.html
@@ -256,6 +256,29 @@
             </div>
         </div>
 
+        <section class="bg-test mb-5">
+            <div class="container mt-5 pb-5">
+                <div class="row">
+                    <div class="row mt-5">
+                        <h5>Sua viagem está planejada para <strong>15 dias</strong></h5>
+                        <div class="col-md-6 pt-5">
+                            <picture>
+                                <img src="/img/gramado2.jpg" alt="gramado2"
+                                    style="width: 100%; border: white solid 1px;">
+                            </picture>
+                        </div>
+                        <div class="col-md-6 pt-5">
+                            <picture>
+                                <img src="/img/gramado3.jpg" alt="gramado2"
+                                    style="width: 100%; border: white solid 1px;">
+                            </picture>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <div class="container">
             <div class="row">
 
